--- a/index.html
+++ b/index.html
@@ -58,17 +58,18 @@
 
         .logo-text h1 {
             font-family: 'Playfair Display', serif;
-            font-size: 1.6rem;
+            font-size: 1.3rem;
             font-weight: 600;
             letter-spacing: 2px;
             white-space: nowrap;
         }
 
         .logo-text p {
-            font-size: 0.7rem;
+            font-size: 0.85rem;
             color: var(--gold-light);
             letter-spacing: 3px;
             font-weight: 300;
+            margin-top: 0.25rem;
         }
 
         .nav-links {
@@ -161,7 +162,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('/mnt/user-data/uploads/2026__5_.png') center/cover no-repeat;
+            background: url('hero-background.png') center/cover no-repeat;
             z-index: 1;
         }
 
@@ -902,8 +903,8 @@
         <div class="nav-container">
             <div class="logo-container">
                 <div class="logo-text">
-                    <h1>WALKING IN HIS-WAY</h1>
-                    <p>GLOBAL MINISTRY</p>
+                    <h1>WALKING IN HIS-WAY GLOBAL</h1>
+                    <p>MINISTRY</p>
                 </div>
             </div>
             <ul class="nav-links">
@@ -939,8 +940,8 @@
         <div class="decorative-cross cross-4">†</div>
         
         <div class="hero-content">
-            <h1 class="hero-title">WALKING IN HIS-WAY</h1>
-            <p class="hero-subtitle">GLOBAL MINISTRY</p>
+            <h1 class="hero-title">WALKING IN HIS-WAY GLOBAL</h1>
+            <p class="hero-subtitle">MINISTRY</p>
             <div class="hero-creed">
                 Powered by God's Grace, Guided by His Spirit, Transformed by His Love
             </div>
