--- a/index.html
+++ b/index.html
@@ -1630,9 +1630,9 @@
                 0: {}, // January
                 1: {  // February
                     14: [{
-                        title: 
-                        time: 
-                        description: 
+                        title: "Valentine's Day Service",
+                        time: "7:00 PM",
+                        description: "Special service celebrating God's love",
                         location: "Main Sanctuary"
                     }]
                 },
